Update setupATpi.sh